--- a/FLX_homework_1/homework/index.html
+++ b/FLX_homework_1/homework/index.html
@@ -54,7 +54,7 @@
                 <abbr title="HTML">HTML</abbr> and <abbr title="CSS">CSS</abbr> are our tools. Mauris a ante. Suspendisse quam sem, consequat at, 
                 commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus. 
                 Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. 
-                To copy a file type <code>COPY</code> <i>filename.</i> <del>Dinner`s at 5:00.</del> <mark>Let’s make that 7.</mark> This <del>text</del> has been struck.
+                To copy a file type <samp>COPY</samp> <i>filename.</i> <del>Dinner`s at 5:00.</del> <mark>Let’s make that 7.</mark> This <del>text</del> has been struck.
             </p>
             <hr>
           <section id="tableSection">
