Changed button style
Changed 
<input type="submit" name="Submit" value="Submit">
to
<button type="submit" name="submit">Submit</button>

--- a/FLX_homework_1/homework/index.html
+++ b/FLX_homework_1/homework/index.html
@@ -182,7 +182,7 @@ both           spaces and
               <textarea cols="30" rows="10"></textarea>
             </fieldset>
             <fieldset>
-              <input type="submit" name="Submit" value="Submit">
+              <button type="submit" name="submit">Submit</button>
             </fieldset>
           </form>
           <footer>
